<resources>
    <string name="app_name">RECIPE LIBRARY</string>
    <string name="title_activity_navigation_drawer">Most Loved Recipes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>>
    <string name="time_picker_title">Time</string>
    <string name="not_a_member">Not a Member yet?</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="spinner_title">hello</string>>
    <string-array name="nav_item_activity_titles">
        <item>Random</item>
        <item>Indian</item>
        <item>Chinese</item>
        <item>French</item>
        <item>Italian</item>
        <item>Support</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_youtube">activity_youtube</string>
    <string name="title_activity_youtube_activity">youtube_activity</string>
</resources>
