<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:ndroid="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="#fa824b">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="32dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/signupText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="59dp"
        android:layout_below="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="7dp"
            android:theme="@style/TextLabel"
            >
            <EditText
                android:id="@+id/email"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="#fa824b"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/email"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/colorWHITE"
                android:textColorHint="@color/colorWHITE" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="#fff" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            ndroid:theme="@style/TextLabel"
            >
            <EditText
                android:id="@+id/password"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/password"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/colorWHITE"
                android:textColorHint="@color/colorWHITE"/>
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingTop="4dp" >

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="Show Password"
                android:visibility="visible"
                android:textColor="#fff"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginbt"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="3dp"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="#fa824b"
            android:textSize="27sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/not_a_member"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>